--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -12,26 +12,8 @@
             [viewport]="viewport" [designLayout]="contentData" [autoPlay]="true" />
         }
         @case('playlist') {
-              @for (item of contentData.contents; track trackById($index, item)) {
-                @switch (item.type) {
-                  @case ('design') {
-                    <app-preview-design-layout class="absolute flex-1 h-full w-full flex items-center justify-center" 
-                      [ngClass]="{ 
-                        'opacity-0': content().currentContent()?.contentId != item.contentId,
-                        'opacity-100': content().currentContent()?.contentId == item.contentId 
-                      }"
-                      [viewport]="viewport" [currentPlaying]="content().currentContent()" [designLayout]="item" [autoPlay]="true" />
-                  }
-                  @default {
-                      <app-preview-assets class="absolute h-full w-full flex items-center justify-center" [currentPlaying]="content().currentContent()" 
-                        [ngClass]="{ 
-                          'opacity-0': content().currentContent()?.contentId != item.contentId,
-                          'opacity-100': content().currentContent()?.contentId == item.contentId 
-                        }"
-                        [currentContent]="item" (timeUpdate)="onProgressUpdate(item.id, $event)" [autoPlay]="true" />
-                  }
-                }
-              }
+          <app-preview-content-renderer class="relative w-full h-full group bg-stone-800 text-white rounded-lg" 
+              [autoPlay]="true" [contentData]="contentData" />
         }
         @default {
           <app-preview-assets class="absolute h-full w-full flex items-center justify-center" 
