--- a/vcastplay-player/src/app/components/preview-assets/preview-assets.component.html
+++ b/vcastplay-player/src/app/components/preview-assets/preview-assets.component.html
@@ -1,6 +1,6 @@
 @switch (currentContent?.type) {
     @case ('video') {
-        <video #video class="max-h-full w-full h-full object-fill" [src]="currentContent?.link | safeurl" preload="none"
+        <video #video class="max-h-full w-full h-full object-fill" [src]="currentContent?.link | safeurl" preload="metadata"
             [attr.poster]="null" [controls]="showControls" [autoplay]="autoPlay" [muted]="true" [loop]="loop"></video>
     }
     @case ('web') {
