--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
@@ -23,11 +23,29 @@
                 cdkDrag [cdkDragDisabled]="!canvasProps.drag" cdkDropList>
                 <!-- <canvas #canvas></canvas> -->
                 @for (layer of canvasHTMLLayers(); track trackById($index, layer)) {
-                    <div class="absolute pointer-events-none z-10" [id]="layer.id" 
+                    <div class="absolute pointer-events-none z-10 overflow-hidden flex items-center justify-center" [id]="layer.id" 
                         [style]="{ top: layer.top + 'px', left: layer.left + 'px', width: layer.width + 'px', 
                             height: layer.height + 'px', transform: 'rotate(' + layer.rotation + 'deg)' }">
-                        <app-playlist-main-player class="relative w-full h-full group bg-stone-800 text-white rounded-lg"
-                            [playlist]="layer.content" [autoPlay]="true" [showControls]="false" />
+                        @if (!layer.content.marquee) {
+                            <app-playlist-main-player class="relative w-full h-full group bg-stone-800 text-white rounded-lg"
+                                [playlist]="layer.content" [autoPlay]="true" [showControls]="false" />
+                        } @else {
+                            <div class="relative overflow-hidden w-full h-full border border-gray-300 bg-transparent">
+                                <div id="marquee" class="animate-marquee items-center justify-center w-full h-full gap-3 text-white">
+                                    <div class="flex gap-3">
+                                        @for (item of layer.content.repeat; track $index) {
+                                            <p class="font-semibold">{{ layer.content.text }}</p>
+                                        }
+                                    </div>
+                                    <div class="flex gap-3">
+                                        @for (item of layer.content.repeat; track $index) {
+                                            <p class="font-semibold">{{ layer.content.text }}</p>
+                                        }
+                                    </div>
+                                </div>
+                            </div>
+
+                        }
                     </div>
                 }
             </div>
