--- a/vcastplay-player/src/app/components/preview-assets/preview-assets.component.html
+++ b/vcastplay-player/src/app/components/preview-assets/preview-assets.component.html
@@ -1,7 +1,7 @@
 @switch (currentContent?.type) {
     @case ('video') {
         <video #video class="max-h-full w-full h-full object-fill" [src]="currentContent?.link | safeurl" preload="metadata"
-            [attr.poster]="null" [controls]="showControls" [autoplay]="autoPlay" [muted]="true" [loop]="loop"></video>
+            [attr.poster]="null" [controls]="showControls" [autoplay]="true" [muted]="true" [loop]="true"></video>
     }
     @case ('web') {
         <iframe class="w-full h-full border-none" [src]="currentContent?.link | safeurl"></iframe>
