--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
@@ -22,7 +22,7 @@
             <div #canvasContainer class="relative origin-center flex items-center justify-center z-20 overflow-hidden" 
                 cdkDrag [cdkDragDisabled]="!canvasProps.drag" cdkDropList>
                 <!-- <canvas #canvas></canvas> -->
-                @for (layer of canvasHTMLLayers(); track trackById($index, layer)) {
+                @for (layer of htmlLayers?.value; track trackById($index, layer)) {
                     <div class="absolute pointer-events-none z-10 overflow-hidden flex items-center justify-center" [id]="layer.id" 
                         [style]="{ top: layer.top + 'px', left: layer.left + 'px', width: layer.width + 'px', 
                             height: layer.height + 'px', transform: 'rotate(' + layer.rotation + 'deg)' }">
@@ -30,21 +30,35 @@
                             <app-playlist-main-player class="relative w-full h-full group bg-stone-800 text-white rounded-lg"
                                 [playlist]="layer.content" [autoPlay]="true" [showControls]="false" />
                         } @else {
-                            <div class="relative overflow-hidden w-full h-full border border-gray-300 bg-transparent">
-                                <div id="marquee" class="animate-marquee items-center justify-center w-full h-full gap-3 text-white">
+                            <div class="relative overflow-hidden w-full h-full">
+                                <div id="marquee" class="animate-marquee items-center justify-center w-full h-full gap-3 text-white"
+                                    [ngStyle]="{ 'animation-duration': layer.style.duration + 's' }">
                                     <div class="flex gap-3">
                                         @for (item of layer.content.repeat; track $index) {
-                                            <p class="font-semibold">{{ layer.content.text }}</p>
+                                            <p class="font-semibold" [ngStyle]="{ 
+                                                'font-size.px': layer.style.size,
+                                                'font-family': layer.style.font,
+                                                'font-weight': layer.style.weight ? 'bold' : 'normal',
+                                                'font-style': layer.style.italic ? 'italic' : 'normal',
+                                                'text-decoration': layer.style.underline ? 'underline' : 'none',
+                                                'color': layer.style.color,
+                                            }">{{ layer.content.text }}</p>
                                         }
                                     </div>
                                     <div class="flex gap-3">
                                         @for (item of layer.content.repeat; track $index) {
-                                            <p class="font-semibold">{{ layer.content.text }}</p>
+                                            <p class="font-semibold" [ngStyle]="{ 
+                                                'font-size.px': layer.style.size,
+                                                'font-family': layer.style.font,
+                                                'font-weight': layer.style.weight ? 'bold' : 'normal',
+                                                'font-style': layer.style.italic ? 'italic' : 'normal',
+                                                'text-decoration': layer.style.underline ? 'underline' : 'none',
+                                                'color': layer.style.color,
+                                            }">{{ layer.content.text }}</p>
                                         }
                                     </div>
                                 </div>
                             </div>
-
                         }
                     </div>
                 }
@@ -94,10 +108,16 @@
                 }
             </div>
         }
+
+        @if (canvasProps.text) { <app-object-properties propsType="text" /> }
+        @if (canvasProps.rect) { <app-object-properties propsType="rect" /> }
+        @if (canvasProps.line) { <app-object-properties propsType="line" /> }
+        @if (canvasProps.marquee) { <app-object-properties propsType="marquee" /> }
         
-        @if (canvasProps.text) { <app-text-properties /> }
+        <!-- @if (canvasProps.text) { <app-text-properties /> }
         @if (canvasProps.rect) { <app-rect-properties /> }
         @if (canvasProps.line) { <app-rect-properties [lineProps]="true" /> }
+        @if (canvasProps.marquee) { <app-marquee-properties /> } -->
     </div>
     <input #importFile type="file" name="importFile" id="importFile" accept=".json" hidden (change)="onImportFile($event)">
 </div>
@@ -158,4 +178,17 @@
             <span class="font-semibold">{{ designFormValue.createdOn | date: 'medium' }}</span>
         </div>
     </div>
+</p-dialog>
+
+<p-dialog header="Input Text" [(visible)]="showInputMarquee" (onHide)="marqueeControl.reset();"
+    [style]="{ width: '30rem' }" [resizable]="false" draggable modal>
+    <div class="mt-3">
+        <p-floatlabel variant="on">
+            <input id="text" type="text" [formControl]="marqueeControl" pInputText fluid>
+            <label for="text">Enter Text here</label>
+        </p-floatlabel>
+    </div>
+    <ng-template #footer>
+        <p-button label="Save" severity="success" [disabled]="marqueeControl.invalid" (onClick)="onClickAddMarquee()" />
+    </ng-template>
 </p-dialog>
