--- a/vcastplay-cms/src/app/components/playlist/playlist-container/playlist-container.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-container/playlist-container.component.html
@@ -1,6 +1,6 @@
-<div class="playlist-container border-2 border-[var(--p-surface-300)] border-dashed p-3">
+<div class="relative bg-gray-100 dark:bg-zinc-800 h-[120px] border-2 border-[var(--p-surface-300)] border-dashed p-3 overflow-x-auto">
     <div class="flex gap-4 h-full playlist-content-lists" cdkDropList [cdkDropListData]="contents?.value" (cdkDropListDropped)="onDropped($event)" cdkDropListOrientation="horizontal">
-        @for (item of contents?.value; track $index) {
+        @for (item of contents?.value; track trackByFn($index, item)) {
             <app-playlist-item-content cdkDrag [content]="item" [playlist]="playListForm.value" [cdkDragDisabled]="isPlaying()" cdkDragBoundary=".playlist-content-lists" />
         } @empty {
             <div class="flex items-center justify-center h-full absolute top-0 left-0 w-full">
