--- a/vcastplay-cms/src/app/components/design-layout/object-properties/object-properties.component.html
+++ b/vcastplay-cms/src/app/components/design-layout/object-properties/object-properties.component.html
@@ -1,4 +1,5 @@
-<div class="flex items-center gap-4 absolute top-0 right-0 z-30 bg-[var(--p-surface-50)] dark:bg-black shadow-lg rounded-lg p-2 select-none" [formGroup]="objectPropsForm" cdkDrag>
+<div class="flex items-center gap-4 absolute top-0 right-0 z-30 bg-[var(--p-surface-50)] dark:bg-black shadow-lg rounded-lg p-2 select-none" 
+    [formGroup]="objectPropsForm" cdkDragBoundary=".canvas-boundary" cdkDrag>
     <div class="w-2 h-8 bg-[var(--p-surface-200)] rounded-lg cursor-move" cdkDragHandle></div>
 
     @switch (propsType) {
@@ -45,14 +46,15 @@
             <p-button [ngClass]="{ 'bg-[var(--p-surface-300)] rounded-lg' : isTransparent() }" (onClick)="onClickTransparent()" size="small" text>
                 <img src="assets/icons/transparent.png" alt="transparent" pTooltip="Transparent" tooltipPosition="bottom" width="20">
             </p-button>
-            <p-colorpicker formControlName="color" appendTo="body" />
+            <p-colorpicker formControlName="fill" appendTo="body" />
         }
 
         @case ('line') {
-            <div class="w-20">
-                <p-inputnumber formControlName="strokeWidth" [min]="1" size="small" showButtons fluid />
+            <div class="flex gap-4 items-center w-50">
+                <p class="text-sm">Stroke:</p>
+                <p-slider formControlName="strokeWidth" min="10" max="100" class="w-full" />
             </div>
-            <p-colorpicker formControlName="color" appendTo="body" />
+            <p-colorpicker formControlName="fill" appendTo="body" />
         }
 
         @case ('marquee') {
