--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -1,6 +1,5 @@
 <div #viewport class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden"
-  [ngClass]="{ 'bg-[var(--p-primary-500)]': !isPlay(), 'bg-stone-800': isPlay() }"
->
+  [ngClass]="{ 'bg-[var(--p-primary-500)]': !isPlay(), 'bg-stone-800': isPlay() }">
 
   <!-- Main Player -->
   <ng-container *ngIf="playerContent() as contentData">
@@ -11,7 +10,8 @@
           [viewport]="viewport" [designLayout]="contentData" (isDoneRendering)="onDoneRendering($event)" />
       }
       @case('playlist') {
-        <app-preview-content-renderer class="relative w-full h-full group bg-stone-800 text-white rounded-lg" [autoPlay]="true" [contentData]="contentData" />
+        <app-preview-content-renderer class="relative w-full h-full group bg-stone-800 text-white rounded-lg" 
+          [autoPlay]="true" [contentData]="contentData" />
       }
       @default {
         <app-preview-assets class="absolute h-full w-full flex items-center justify-center" [currentContent]="contentData" 
@@ -24,6 +24,22 @@
     <div class="absolute top-0 start-0 flex items-center justify-center p-6">
       <img class="w-30" src="assets/vcastplay.png" alt="vcastplay 2.0 logo">
     </div>
+
+    @if (isDev()) {
+      <div class="absolute top-3 right-3 p-2 flex flex-col items-center gap-3">
+        @if (networkService.isOnline()) {
+          <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-green-200)' }">
+            <div class="h-2 w-2 rounded-xl bg-green-600"></div>
+            <p class="text-green-600 font-semibold">ONLINE</p>
+          </p-chip>
+        } @else {
+          <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-red-200)' }">
+            <div class="h-2 w-2 rounded-xl bg-red-600"></div>
+            <p class="text-red-600 font-semibold">OFFLINE</p>
+          </p-chip>
+        }
+      </div>
+    }
 
     <div class="absolute h-full w-full flex flex-col gap-4 items-center justify-center">
       <p class="text-5xl md:text-8xl font-bold text-white tracking-[1.25rem] md:tracking-[1.75rem]">{{ systemInfo()?.playerCode }}</p>
@@ -49,19 +65,4 @@
   @if (platform == 'desktop') {
     <app-progress-bar class="absolute bottom-10 left-0 w-full px-4 mb-4" />
   }
-  <!-- @if (isDev()) {
-    <div class="absolute top-3 right-3 p-2 flex flex-col items-center gap-3">
-      @if (networkService.isOnline()) {
-        <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-green-200)' }">
-          <div class="h-2 w-2 rounded-xl bg-green-600"></div>
-          <p class="text-green-600 font-semibold">ONLINE</p>
-        </p-chip>
-      } @else {
-        <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-red-200)' }">
-          <div class="h-2 w-2 rounded-xl bg-red-600"></div>
-          <p class="text-red-600 font-semibold">OFFLINE</p>
-        </p-chip>
-      }
-    </div>
-  } -->
 </div>
