--- a/vcastplay-cms/src/app/components/design-layout/object-properties/object-properties.component.html
+++ b/vcastplay-cms/src/app/components/design-layout/object-properties/object-properties.component.html
@@ -24,7 +24,7 @@
                     <i [class]="item.icon"></i>
                 </ng-template>
             </p-selectbutton>
-            <p-colorpicker formControlName="color" appendTo="body" />
+            <p-colorpicker formControlName="color" appendTo="body" class="border-2 border-[var(--p-surface-300)] rounded-lg" />
         }
 
         @case ('rect') {
@@ -46,15 +46,15 @@
             <p-button [ngClass]="{ 'bg-[var(--p-surface-300)] rounded-lg' : isTransparent() }" (onClick)="onClickTransparent()" size="small" text>
                 <img src="assets/icons/transparent.png" alt="transparent" pTooltip="Transparent" tooltipPosition="bottom" width="20">
             </p-button>
-            <p-colorpicker formControlName="fill" appendTo="body" />
+            <p-colorpicker formControlName="fill" appendTo="body" class="border-2 border-[var(--p-surface-300)] rounded-lg" />
         }
 
         @case ('line') {
             <div class="flex gap-4 items-center w-50">
                 <p class="text-sm">Stroke:</p>
-                <p-slider formControlName="strokeWidth" min="10" max="100" class="w-full" />
+                <p-slider formControlName="strokeWidth" min="1" max="100" class="w-full" />
             </div>
-            <p-colorpicker formControlName="fill" appendTo="body" />
+            <p-colorpicker formControlName="fill" appendTo="body" class="border-2 border-[var(--p-surface-300)] rounded-lg" />
         }
 
         @case ('marquee') {
@@ -76,7 +76,7 @@
                     <p-button [ngClass]="{ 'bg-[var(--p-surface-300)] rounded-lg' : isUnderline() }" (onClick)="onClickUnderline()" size="small" text>
                         <img src="assets/icons/underline.png" alt="underline" pTooltip="Underline" width="12">
                     </p-button>
-                    <p-colorpicker formControlName="color" appendTo="body" />
+                    <p-colorpicker formControlName="color" appendTo="body" class="border-2 border-[var(--p-surface-300)] rounded-lg" />
                 </div>
                 <p-divider />
                 <p class="text-sm">Shape Properties:</p>
@@ -103,7 +103,7 @@
                     <p-button [ngClass]="{ 'bg-[var(--p-surface-300)] rounded-lg' : isTransparent() }" (onClick)="onClickTransparent()" size="small" text>
                         <img src="assets/icons/transparent.png" alt="transparent" pTooltip="Transparent" tooltipPosition="bottom" width="100">
                     </p-button>
-                    <p-colorpicker formControlName="fill" appendTo="body" />
+                    <p-colorpicker formControlName="fill" appendTo="body" class="border-2 border-[var(--p-surface-300)] rounded-lg" />
                 </div>
                 <p-divider />
                 <div class="flex gap-2 items-center">
